updating notebooks to re-do drought analysis

--- a/CreatingEnvironment.ipynb
+++ b/CreatingEnvironment.ipynb
@@ -8,7 +8,7 @@
     "```\n",
     "git clone git@github.com:dtadych/\n",
     "cd Az-Well-GRACE-Spatiotemp-Analysis\n",
-    "conda env create -f azdroughtanalysis.yml\n",
+    "conda env create -f enviornment.yml\n",
     "```\n",
     "Once you have the environment set up you can activate it by running:\n",
     "\n",
@@ -17,8 +17,8 @@
     "```\n",
     "If you have trouble installing the .yml file, you can always install packages through conda-forge or pip install manually.  It is reccomended to use conda-forge when possible.\n",
     "```\n",
-    "conda create --name azgwspatialanalysis python=3.8\n",
-    "conda activate azgwspatialanalysis\n",
+    "conda create --name azdroughtanalysis python=3.8\n",
+    "conda activate azdroughtanalysis\n",
     "conda install -c conda-forge <package>\n",
     "\n",
     "Packages to install include\n",
