--- a/CreatingEnvironment.ipynb
+++ b/CreatingEnvironment.ipynb
@@ -27,7 +27,9 @@
     "- geopandas\n",
     "- seaborn\n",
     "- scipy\n",
-    "- pymannkendall"
+    "- pymannkendall\n",
+    "- xarray\n",
+    "- easymore"
    ]
   },
   {
